--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
+    "i18next": "^23.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
