--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@microlink/react-json-view": "^1.23.0",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.1.1",
     "@tanstack/react-query": "^5.29.2",
@@ -21,7 +23,8 @@
     "i18next": "^23.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.1.0"
+    "react-i18next": "^14.1.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
